--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@tailwindcss/ui": "^0.6.2",
     "rxjs": "~6.5.4",
+    "tailwindcss-type": "0.0.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
