Issue: Popper no funciona

--- a/angular.json
+++ b/angular.json
@@ -27,25 +27,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/assets/vendor/spinkit.css",
-              "src/assets/vendor/perfect-scrollbar.css",
-              "src/assets/css/material-icons.css",
-              "src/assets/css/fontawesome.css",
-              "src/assets/css/preloader.css",
-              "src/assets/css/app.css"
-            ],
-            "scripts": [
-              "src/assets/vendor/jquery.min.js",
-              "src/assets/vendor/popper.min.js",
-              "src/assets/vendor/bootstrap.min.js",
-              "src/assets/vendor/perfect-scrollbar.min.js",
-              "src/assets/vendor/dom-factory.js",
-              "src/assets/vendor/material-design-kit.js",
-              "src/assets/js/app.js",
-              "src/assets/js/preloader.js",
-              "src/assets/js/sidebar-mini.js"
-            ]
+            "styles": [],
+            "scripts": []
           },
           "configurations": {
             "production": {
