--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@angular/router": "~11.0.0",
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@popperjs/core": "^2.5.3",
+        "@sweetalert2/ngx-sweetalert2": "^8.1.1",
         "bootstrap": "^4.5.3",
         "chart.js": "^2.9.4",
         "dom-factory": "^1.1.0",
@@ -34,6 +35,7 @@
         "popper.js": "^1.16.1",
         "rxjs": "~6.5.4",
         "spinkit": "^2.0.1",
+        "sweetalert2": "^10.10.1",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
     },
